@@ -5,10 +5,13 @@ import javax.script.ScriptEngineManager;
 import javax.script.ScriptException;
 import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Objects;
+import java.io.StringWriter;
 
 public class JReverseScriptingCore {
+    public static StringWriter writer = new StringWriter();
     public static ScriptEngine engine;
     public static int Main(){
         ScriptEngineManager manager = new ScriptEngineManager();
@@ -16,19 +19,26 @@ public class JReverseScriptingCore {
         if(Objects.isNull(engine)){
             return 1;
         }
+        engine.getContext().setWriter(writer);
         return 0;
     }
 
-    public static String RunScript(String abpath) throws IOException {
-        if(Files.exists(Paths.get(abpath)) != true) return "Script File Does Not Exist";
-        String scripttext = new String(Files.readAllBytes(Paths.get(abpath)));
-        if(scripttext.isEmpty() || scripttext == null) return "Script Text Is NULL";
-        Object returnable;
-        try{
-            returnable = engine.eval(scripttext);
-        } catch (ScriptException e){
-            return "Script Error!"+e.getMessage();
+    public static String RunScript(String abpath) {
+        if(Objects.isNull(engine)) return "Script Engine Was NULL";
+        Path pathab = Paths.get(abpath);
+        if(!Files.exists(pathab)) return "Script File Does Not Exist";
+        String scripttext = null;
+        try {
+            scripttext = Files.readString(pathab);
+        } catch (IOException e) {
+            return "IOExeption: "+e.getMessage();
         }
-        return (String) returnable;
+        if(scripttext.isEmpty()) return "Script Text Is NULL";
+        try{
+            engine.eval(scripttext);
+        } catch (ScriptException e){
+            return "Script Error: "+e.getMessage();
+        }
+        return writer.toString();
     }
 }
